--- a/server.properties
+++ b/server.properties
@@ -16,7 +16,7 @@ enforce-whitelist=false
 entity-broadcast-range-percentage=100
 force-gamemode=false
 function-permission-level=2
-gamemode=survival
+gamemode=creative
 generate-structures=true
 generator-settings={}
 hardcore=false
@@ -24,7 +24,7 @@ hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
 level-name=wither
-level-seed=
+level-seed=1512538303105430906
 level-type=minecraft\:normal
 max-chained-neighbor-updates=1000000
 max-players=20
